fixed button text wrapping past button

--- a/src/public/style.css
+++ b/src/public/style.css
@@ -35,9 +35,9 @@ footer {
 .link {
   background-color:  #111;
   color: white;
-  font-size: 1.5vw;
+  font-size: 1vw;
   border-radius: 10px;
-  height: 50px;
+  height: 100%;
   width: 75%;
   display: flex;
   align-items: center;
@@ -64,7 +64,7 @@ a {
 
 .glow-on-hover {
   width: 80%;
-  height: 50px;
+  height: 100%;
   border: none;
   outline: none;
   color: #fff;
@@ -73,8 +73,11 @@ a {
   position: relative;
   z-index: 0;
   border-radius: 10px;
-  font-size: 1.7vw;
-  word-break: keep-all;
+  font-size: 1.5vw;
+  white-space: normal;
+  /* overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap; */
 
 }
 
